fix: horizontal scroll in sidebar

--- a/src/components/Drawer/Drawer.css
+++ b/src/components/Drawer/Drawer.css
@@ -1,5 +1,5 @@
 .Drawer {
-  width: 100%;
+  width: calc(var(--sidebar-width) - 32px);
   user-select: none;
 }
 
