--- a/src/components/SideBar/ItemDrawer/ItemDrawer.css
+++ b/src/components/SideBar/ItemDrawer/ItemDrawer.css
@@ -48,8 +48,7 @@
 
 .ItemDrawer .overflow-container {
   height: calc(100% - 96px);
-  overflow-y: auto; /* Firefox and others that may not support overlay */
-  overflow-y: overlay;
+  overflow-y: auto;
 }
 
 .ItemDrawer .search-container {
@@ -57,8 +56,7 @@
 }
 
 .ItemDrawer .ui.medium.header.title,
-.ItemDrawer .search-container,
-.ItemDrawer .overflow-container {
+.ItemDrawer .search-container {
   padding-right: 16px;
 }
 
